# roost

./: .gitignore  Cargo.toml  LICENSE  README.md  reproduce_bug.rs
docs/: building.md  contributing.md  testing.md
docs/superpowers/plans/: 2026-04-18-auto-populate-link-paths.md
scripts/vm-setup/: setup-common.sh  setup-fedora.sh  setup-nixos.sh  setup-test-data.sh  setup-ubuntu.sh  setup-windows.sh  usage.md
src/: app.rs  git.rs  init.rs  lib.rs  linker.rs  logo.rs  main.rs  os_detect.rs  pager.rs  scanner.rs
src/app/: mod.rs  tests.rs
src/data/: known_apps.txt  known_dotfiles.txt
src/git/: mod.rs  tests.rs
src/linker/: mod.rs  tests.rs
src/scanner/: mod.rs  tests.rs
src/tui/: event.rs  mod.rs  search.rs  state.rs  ui.rs
src/tui/main_view/: event.rs  mod.rs  state.rs  ui.rs
src/tui/main_view/dialogs/: app_link.rs  confirm.rs  diff_view.rs  git_log.rs  help.rs  ignore.rs  mod.rs  profile.rs  undo.rs
src/tui/search/: mod.rs  tests.rs
tests/: add.rs  adopt.rs  diff.rs  doctor.rs  edge_cases.rs  help.rs  log.rs  multi_profile.rs  profile.rs  remote.rs  remove.rs  restore.rs  rollback.rs  status.rs  sync.rs  undo.rs  where.rs  workflows.rs
tests/helpers/: mod.rs
